<resources>
    <string name="app_name">PlayMovieApp</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ou_entrar_com">ou entrar com:</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="google">google</string>
    <string name="criar_nova_conta"><u>Criar nova conta</u></string>
    <string name="title_activity_interesses">InteressesActivity</string>
    <string name="varsao">v1.0.0</string>
    <string name="titulo_configuracoes">Configurações</string>
    <string name="titulo_sub_nivel">Nível 01</string>
    <string name="titulo_jogo">Pergunta 1 de 15</string>
    <string name="todo">TODO</string>
    <string name="politica_de_privacidade"><![CDATA[Termos e Política de Privacidade]]></string>
    <string name="carregando">Carregando…</string>
    <string name="criar_minha_conta">Criar minha conta</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="parabens">Parabéns você passou para o próximo nível!</string>
    <string name="tempo_gasto">"Tempo gasto: "</string>
    <string name="proximo_nivel">Próximo</string>

    <string name="SynopsesFillIn">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis. Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="generos">Gêneros</string>
    <string name="categoria">Categoria</string>
    <string name="nota_imdb">Nota IMDb</string>
    <string name="ano">Ano</string>
    <string name="limpar_filtros">Limpar filtros</string>

    <string-array name="generos">
        <item>Ação</item>
        <item>Aventura</item>
        <item>Animação</item>
        <item>Comédia</item>
        <item>Crime</item>
        <item>Documentário</item>
        <item>Drama</item>
        <item>Família</item>
        <item>Fantasia</item>
        <item>História</item>
        <item>Terror</item>
        <item>Música</item>
        <item>Mistério</item>
        <item>Romance</item>
        <item>Ficção Científica</item>
        <item>Cinema TV</item>
        <item>Thriller</item>
        <item>Guerra</item>
        <item>Faroeste</item>
    </string-array>

    <string-array name="categorias">
        <item>Filme</item>
        <item>Série</item>
    </string-array>

    <string-array name="anos">
        <item>Qualquer ano</item>
        <item>2020</item>
        <item>2010</item>
        <item>2000</item>
        <item>1990</item>
        <item>1980</item>
        <item>1970</item>
        <item>Até 1960</item>
    </string-array>

    <string-array name="notas">
        <item>Qualquer nota</item>
        <item>Maior que 9</item>
        <item>Maior que 8</item>
        <item>Maior que 7</item>
        <item>Maior que 6</item>
        <item>Maior que 5</item>
    </string-array>

    <string name="perguntas">Perguntas</string>
    <string name="search">Buscar</string>
    <string name="aleatorio">Aleatório</string>
    <string name="title_activity_detalhes_desenvolvedor">Desenvolvedor</string>
    <string name="jogar">Jogar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">more</string>
    <string name="melhores_s_ries">Melhores Séries</string>
    <string name="sugest_es">Sugestões</string>
    <string name="melhores_filmes">Melhores Filmes</string>
    <string name="lan_amentos">Lançamentos</string>
    <string name="logo_playmovie">Logo PlayMovie</string>
    <string name="entrar_com_outra_conta">entrar com outra conta</string>

    <string name="termos_html">
        <![CDATA[
        <p>Ao clicar em criar minha conta, eu aceito os <b>Termos de Uso</b> e a <b>Política de Privacidade</b></p>
        ]]>
    </string>
    <string name="nodata">NO DATA</string>
    <string name="nodate">XXXX</string>
    <string name="facebook_app_id">401441707765801</string>
    <string name="fb_login_protocol_scheme">fb401441707765801</string>
    <string name="prefs_file">br.com.digitalhouse.playmovieapp.PREFERENCE.FILEE.KEY</string>
    <string name="default_web_client_id">760124306182-v24eldc491p8tach7tcr8d6b5qtanc2c.apps.googleusercontent.com</string>
</resources>