<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/padding_3"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageViewGoogle"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/google"
        android:src="@drawable/ic_google" />

    <ImageView
        android:id="@+id/imageFace"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:contentDescription="@string/twitter"
        android:src="@drawable/ic_twitter" />

    <ImageView
        android:id="@+id/imageViewInsta"
        android:layout_width="26dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_height="26dp"
        android:contentDescription="@string/facebook"
        android:src="@drawable/ic_facebook" />
</LinearLayout>