<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <include
        android:id="@+id/include_config_toolbar"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="21dp"
        android:layout_marginStart="28dp"/>

    <Spinner
        android:id="@+id/spinnerGeneros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="7dp"
        android:spinnerMode="dropdown"
        android:drawSelectorOnTop="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="28dp"/>

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="7dp"
        android:spinnerMode="dropdown"
        android:drawSelectorOnTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/nota_imdb"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="28dp"/>

    <Spinner
        android:id="@+id/spinnerNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="7dp"
        android:spinnerMode="dropdown"
        android:drawSelectorOnTop="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/ano"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="28dp"/>

    <Spinner
        android:id="@+id/spinnerAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="7dp"
        android:spinnerMode="dropdown"
        android:drawSelectorOnTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="116dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/limpar_filtros"
            android:textColor="#8B8B8B"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_gravity="bottom"/>

        <ImageView
            android:id="@+id/btnSugestao"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_botao_sugestao"
            android:src="@drawable/ic_random_solid"/>

    </LinearLayout>

</LinearLayout>