<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:paddingHorizontal="@dimen/padding_7"
        android:paddingVertical="@dimen/padding_7"
        tools:context=".ui.novos.Login">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/margin_11"
            android:contentDescription="@string/logo_playmovie"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/input_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/Theme.PlayMovieApp.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_6"
            android:theme="@style/Theme.PlayMovieApp.TextInputLayout.Custom"
            app:layout_constraintBottom_toTopOf="@id/input_passwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_logo"
            app:layout_constraintWidth_max="@dimen/max_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                style="@style/Theme.PlayMovieApp.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_passwd"
            style="@style/Theme.PlayMovieApp.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:theme="@style/Theme.PlayMovieApp.TextInputLayout.Custom"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email"
            app:layout_constraintWidth_max="@dimen/max_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                style="@style/Theme.PlayMovieApp.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/Theme.PlayMovieApp.MaterialButton.Default"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_2"
            android:text="@string/entrar"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@id/textView_criar_conta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_passwd"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/textView_criar_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_11"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:includeFontPadding="true"
            android:paddingHorizontal="@dimen/padding_4"
            android:paddingVertical="@dimen/padding_2"
            android:text="@string/criar_nova_conta"
            android:textColor="@color/secondary"
            android:textSize="@dimen/font_size_3"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/linearLayout_redes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

        <TextView
            android:id="@+id/textView_entrar_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar_com_outra_conta"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_2"
            app:layout_constraintBottom_toTopOf="@id/linearLayout_redes"
            app:layout_constraintEnd_toEndOf="@id/linearLayout_redes"
            app:layout_constraintStart_toStartOf="@id/linearLayout_redes" />

        <LinearLayout
            android:id="@+id/linearLayout_redes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_6"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_criar_conta">

            <include
                android:id="@+id/includeSocialNetworksLogin"
                layout="@layout/layout_social_networks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:text="@string/varsao"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_redes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>