<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_parabens">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProximoNivel"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="320dp"
        android:outlineProvider="none"
        android:text="@string/proximo_nivel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="288dp"
        android:layout_height="83dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="156dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/confetti_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="188dp"
        android:layout_height="63dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="260dp"
        android:text="@string/tempo_gasto"
        android:textColor="#E94560"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCompartilhaParabens"
        android:layout_width="71dp"
        android:layout_height="59dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="324dp"
        android:backgroundTint="#00FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_share_16_px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>